--- a/index.html
+++ b/index.html
@@ -13,28 +13,48 @@
       align-items: center;
       min-height: 100vh;
       background-color: #f9f9f9;
+      font-family: Vazirmatn, sans-serif;
+    }
+    .video-container {
+      position: relative;
+      width: 400px; /* اندازه جمع‌وجور */
     }
     video {
-      width: 400px; /* اندازه جمع‌وجور */
+      width: 100%;
       border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      display: block;
     }
-    .copyright {
+    /* متن overlay داخل ویدیو */
+    .overlay {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background-color: rgba(0,0,0,0.5);
+      color: #fff;
+      padding: 3px 8px;
+      font-size: 12px;
+      border-radius: 5px;
+      pointer-events: none;
+    }
+    .footer {
       margin-top: 10px;
       font-size: 14px;
       color: #555;
-      font-family: Vazirmatn, sans-serif;
     }
   </style>
 </head>
 <body>
 
-  <video autoplay loop playsinline muted>
-    <source src="-2147483648_-210645.mp4" type="video/mp4">
-    مرورگر شما ویدیو را پشتیبانی نمی‌کند.
-  </video>
+  <div class="video-container">
+    <video id="myVideo" controls autoplay loop playsinline>
+      <source src="-2147483648_-210645.mp4" type="video/mp4">
+      مرورگر شما ویدیو را پشتیبانی نمی‌کند.
+    </video>
+    <div class="overlay">radmehrsite.ir/rostami</div>
+  </div>
 
-  <div class="copyright">© radmehrsite.ir/rostami</div>
+  <div class="footer">© radmehrsite.ir/rostami</div>
 
 </body>
 </html>
