--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     body {
       margin: 0;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
@@ -17,25 +16,61 @@
     }
     .video-container {
       position: relative;
-      width: 400px; /* اندازه جمع‌وجور */
+      width: 400px;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
     video {
       width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       display: block;
       cursor: pointer;
+      border-radius: 10px;
     }
-    /* متن overlay داخل ویدیو */
-    .overlay {
+    /* دکمه زربدر */
+    .close-btn {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      background: rgba(0,0,0,0.7);
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .close-btn:hover {
+      background: rgba(0,0,0,0.9);
+    }
+    /* دکمه ورود به بازی */
+    .play-btn {
       position: absolute;
       bottom: 10px;
-      right: 10px;
-      background-color: rgba(0,0,0,0.5);
-      color: #fff;
-      padding: 3px 8px;
-      font-size: 12px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255,255,255,0.9);
+      color: #000;
+      border: none;
+      padding: 8px 12px;
       border-radius: 5px;
+      font-size: 14px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .play-btn:hover {
+      background: rgba(255,255,255,1);
+    }
+    .overlay-text {
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: #fff;
+      font-weight: bold;
+      font-size: 14px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
       pointer-events: none;
     }
     .footer {
@@ -47,22 +82,32 @@
 </head>
 <body>
 
-  <div class="video-container">
-    <video id="myVideo" controls autoplay loop playsinline muted>
+  <div class="video-container" id="adContainer">
+    <video id="myVideo" autoplay loop playsinline muted>
       <source src="-2147483648_-210645.mp4" type="video/mp4">
       مرورگر شما ویدیو را پشتیبانی نمی‌کند.
     </video>
-    <div class="overlay">radmehrsite.ir/rostami</div>
+
+    <button class="close-btn" id="closeBtn">✕</button>
+    <div class="overlay-text">میخوای بازی رستمی رو انجام بدی</div>
+    <button class="play-btn" id="playBtn">ورود به بازی</button>
   </div>
 
   <div class="footer">© طراحی شده توسط رادمهر محمدی</div>
 
   <script>
-    const video = document.getElementById('myVideo');
+    const adContainer = document.getElementById('adContainer');
+    const closeBtn = document.getElementById('closeBtn');
+    const playBtn = document.getElementById('playBtn');
 
-    // با کلیک روی ویدیو، صدا فعال می‌شود
-    video.addEventListener('click', () => {
-      video.muted = false;
+    // زربدر فقط تبلیغ را می‌بندد
+    closeBtn.addEventListener('click', () => {
+      adContainer.style.display = 'none';
+    });
+
+    // ورود به بازی
+    playBtn.addEventListener('click', () => {
+      window.location.href = 'https://radmehr-ir.github.io/bazi/';
     });
   </script>
 
