--- a/index.html
+++ b/index.html
@@ -13,99 +13,61 @@
       min-height: 100vh;
       background-color: #f9f9f9;
       font-family: Vazirmatn, sans-serif;
-    }
-    .video-container {
       position: relative;
-      width: 400px;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
     video {
       width: 100%;
-      display: block;
-      cursor: pointer;
+      max-width: 600px;
       border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
-    /* دکمه زربدر */
-    .close-btn {
+    #playBtn {
       position: absolute;
-      top: 8px;
-      right: 8px;
-      background: rgba(0,0,0,0.7);
-      color: #fff;
-      border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    .close-btn:hover {
-      background: rgba(0,0,0,0.9);
-    }
-    /* دکمه ورود به بازی */
-    .play-btn {
-      position: absolute;
-      bottom: 10px;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(255,255,255,0.9);
-      color: #000;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 5px;
-      font-size: 14px;
-      cursor: pointer;
+      padding: 10px 20px;
+      font-size: 16px;
       font-weight: bold;
-    }
-    .play-btn:hover {
-      background: rgba(255,255,255,1);
-    }
-    .overlay-text {
-      position: absolute;
-      bottom: 50px;
-      left: 50%;
-      transform: translateX(-50%);
+      background-color: #28a745;
       color: #fff;
-      font-weight: bold;
-      font-size: 14px;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
-      pointer-events: none;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      display: none; /* اول مخفی است */
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+    #playBtn:hover {
+      background-color: #218838;
     }
     .footer {
       margin-top: 10px;
       font-size: 14px;
       color: #555;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <div class="video-container" id="adContainer">
-    <video id="myVideo" autoplay loop playsinline muted>
-      <source src="-2147483648_-210645.mp4" type="video/mp4">
-      مرورگر شما ویدیو را پشتیبانی نمی‌کند.
-    </video>
+  <video id="myVideo" autoplay loop playsinline muted>
+    <source src="-2147483648_-210645.mp4" type="video/mp4">
+    مرورگر شما ویدیو را پشتیبانی نمی‌کند.
+  </video>
 
-    <button class="close-btn" id="closeBtn">✕</button>
-    <div class="overlay-text">میخوای بازی رستمی رو انجام بدی</div>
-    <button class="play-btn" id="playBtn">ورود به بازی</button>
-  </div>
+  <button id="playBtn">ورود به بازی رستمی</button>
 
   <div class="footer">© طراحی شده توسط رادمهر محمدی</div>
 
   <script>
-    const adContainer = document.getElementById('adContainer');
-    const closeBtn = document.getElementById('closeBtn');
     const playBtn = document.getElementById('playBtn');
 
-    // زربدر فقط تبلیغ را می‌بندد
-    closeBtn.addEventListener('click', () => {
-      adContainer.style.display = 'none';
-    });
+    // بعد از 5 ثانیه، دکمه نمایش داده شود
+    setTimeout(() => {
+      playBtn.style.display = 'block';
+    }, 5000);
 
-    // ورود به بازی
+    // کلیک روی دکمه → رفتن به صفحه بازی
     playBtn.addEventListener('click', () => {
       window.location.href = 'https://radmehr-ir.github.io/bazi/';
     });
